# ccom-visualizer

./: .gitignore  Makefile  README.md  docker-compose.yml  example.env  makefile
converter/: Dockerfile  dev-requirements.in  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
converter/requirements/: app.txt  dev.txt
mosquitto/: mosquitto.ccom.conf  mosquitto.grafana.conf
